Fix layout problem on admin page.  Fixes https://app.asana.com/0/15264711598672/90353634299143

--- a/assembl/static/css/layout/_admin.scss
+++ b/assembl/static/css/layout/_admin.scss
@@ -30,10 +30,11 @@ table {
   }
 }
 
+.admin-discussion,
 .admin-notifications,
 .admin-profile,
 .admin-account,
-.admin-settings{
+.admin-settings {
   width: 85%;
   margin: 30px auto 0 auto;
 
